fix positions of cropper and preview image block

--- a/app/assets/stylesheets/new-style3/_add-avatar-block.scss
+++ b/app/assets/stylesheets/new-style3/_add-avatar-block.scss
@@ -22,10 +22,8 @@
   }
 
   &_adjust {
-    &_file-button {
-    }
-
-    &__label {
+    &_edit-image-block {
+      margin-bottom: 30px !important;
     }
   }
 }
